plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.12'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //아파치 poi
    implementation 'org.apache.poi:poi-ooxml:5.4.0'
    // 쿼리 dsl
    implementation "io.github.openfeign.querydsl:querydsl-jpa:6.11"
    annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:6.11:jpa"
    testAnnotationProcessor "io.github.openfeign.querydsl:querydsl-apt:6.11:jpa"
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    testAnnotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    //모델 mapper
    implementation 'org.modelmapper:modelmapper:3.1.1'

    //log4 jdbc2
    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'

    //스프링 시큐리티
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    //스프링 시큐리티 리소스 서버
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    
    // jwt 관련 라이브러리들
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //S3
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'
    implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.0.0")


}

tasks.named('test') {
    useJUnitPlatform()
}

clean {
    delete file('src/main/generated')
}

